-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1.14
-
Fix Version/s: 10.1.15
-
Component/s: wsrep
-
Labels:None
-
Environment:MariaDB 10.1.14
Galera 25.3.15
After setting the wsrep_provider to galera (without enabling wsrep_on):
[mysqld]
...
binlog_format=ROW
wsrep_provider=/usr/lib64/galera/libgalera_smm.so
mysqld will start ok.
It crashes after setting the wsrep_cluster_address:
MariaDB [(none)]> set global wsrep_cluster_address="gcomm://";
ERROR 2013 (HY000): Lost connection to MySQL server during query
160607 5:54:00 [ERROR] mysqld got signal 11 ;
|
This could be because you hit a bug. It is also possible that this binary
|
or one of the libraries it was linked against is corrupt, improperly built,
|
or misconfigured. This error can also be caused by malfunctioning hardware.
|
|
To report this bug, see https://mariadb.com/kb/en/reporting-bugs
|
|
We will try our best to scrape up some info that will hopefully help
|
diagnose the problem, but since we have already crashed,
|
something is definitely wrong and this may fail.
|
|
Server version: 10.1.14-MariaDB
|
key_buffer_size=134217728
|
read_buffer_size=131072
|
max_used_connections=1
|
max_threads=153
|
thread_count=1
|
It is possible that mysqld could use up to
|
key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 467113 K bytes of memory
|
Hope that's ok; if not, decrease some variables in the equation.
|
|
Thread pointer: 0x0x7f65841ee6c8
|
Attempting backtrace. You can use the following information to find out
|
where mysqld died. If you see no messages after this, something went
|
terribly wrong...
|
stack_bottom = 0x7f659abf5258 thread_stack 0x48400
|
/usr/sbin/mysqld(my_print_stacktrace+0x29)[0x557293e117a9]
|
/usr/sbin/mysqld(handle_fatal_signal+0x34d)[0x55729398470d]
|
/lib64/libpthread.so.0(+0x10f40)[0x7f6598d86f40]
|
/usr/sbin/mysqld(+0x523a9d)[0x557293925a9d]
|
/usr/sbin/mysqld(_Z28wsrep_cluster_address_updateP7sys_varP3THD13enum_var_type+0x118)[0x5572939344d8]
|
/usr/sbin/mysqld(_ZN7sys_var6updateEP3THDP7set_var+0xd3)[0x5572937a5f63]
|
/usr/sbin/mysqld(_ZN7set_var6updateEP3THD+0x17)[0x5572937a6207]
|
/usr/sbin/mysqld(_Z17sql_set_variablesP3THDP4ListI12set_var_baseEb+0x89)[0x5572937a7489]
|
/usr/sbin/mysqld(_Z21mysql_execute_commandP3THD+0x6aa7)[0x55729381da67]
|
/usr/sbin/mysqld(_Z11mysql_parseP3THDPcjP12Parser_state+0x264)[0x55729381fc24]
|
/usr/sbin/mysqld(_Z16dispatch_command19enum_server_commandP3THDPcj+0x2157)[0x557293822b97]
|
/usr/sbin/mysqld(_Z10do_commandP3THD+0x163)[0x5572938232d3]
|
/usr/sbin/mysqld(_Z24do_handle_one_connectionP3THD+0x18c)[0x5572938db33c]
|
/usr/sbin/mysqld(handle_one_connection+0x37)[0x5572938db507]
|
/lib64/libpthread.so.0(+0x7484)[0x7f6598d7d484]
|
/lib64/libc.so.6(clone+0x6d)[0x7f6598228e7d]
|
|
Trying to get some variables.
|
Some pointers may be invalid and cause the dump to abort.
|
Query (0x7f65840d6720): is an invalid pointer
|
Connection ID (thread ID): 3
|
Status: NOT_KILLED
|
|
Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=off,table_elimination=on,extended_keys=on,exists_to_in=on
|
- links to